--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
-    "require": {
-        "doctrine/orm":"~2.2,>=2.2.3"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "4.6.*"
-    }
+  "require": {
+    "doctrine/orm": "~2.2,>=2.2.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.6.*"
+  },
+  "autoload": {
+    "psr-0": {"": "src/"}
+  }
 }
